Fix overflow tag

--- a/app/core/styles/index.css
+++ b/app/core/styles/index.css
@@ -26,3 +26,15 @@
     @apply font-serif text-title3 leading-8;
   }
 }
+
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
